--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     compile "com.beust:jcommander:1.78"
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.15'
     compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
