--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.8'
     annotationProcessor 'org.projectlombok:lombok:1.18.8'
     compile "com.beust:jcommander:1.78"
+    compile 'org.bitcoinj:bitcoinj-core:0.15.8'
+    compile group: 'com.google.guava', name: 'guava-gwt', version: '30.0-jre'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.15'
